<resources>
    <string name="app_name">Panoramic</string>
    <string name="LoginP">Inicio de sesión</string>
    <string name="Logins">Inicie sesión con su cuenta de Panoramic</string>
    <string name="Email">E-mail</string>
    <string name="text_hint1">micorreo@panoramic.com</string>
    <string name="text_hint2">Introduce tu contraseña</string>
    <string name="text_hint3">Tu nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="text_boton1">Iniciar sesión</string>
    <string name="text_boton2">Registrarse</string>
    <string name="register">¿No tienes cuenta? Registrate Aqui</string>
    <string name="Registro">Registro</string>
    <string name="Descr">Ingresa los siguientes datos</string>
    <string name="name">Nombre</string>
    <string name="cierra">Cierra</string>
    <string name="filtro">filtro</string>
    <string name="seleccionar_ciudad">Seleccionar ciudad</string>
    <string name="ciudad">Ciudad</string>
    <string name="precio">Precio</string>
    <string name="desde">Desde</string>
    <string name="direcci_n">Dirección</string>
    <string name="puntuaci_n">Puntuación</string>
    <string name="telefono">Telefono</string>
    <string name="tipo_de_establecimiento">Tipo de establecimiento</string>
    <string name="title_activity_ver_mapa">VerMapa</string>
    <string name="title_search">¿A dónde vamos?</string>
    <string name="steps_title">Pasos</string>
    <string name="steps_suggestion">Keep moving!</string>
    <string name="list_users_title">Usuarios</string>
    <string name="image_of_badge">image_of_badge</string>
    <string name="title_camera">Camara</string>
    <string name="title_badge">Badge</string>
</resources>