<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filtrar">
    <RelativeLayout
        android:id="@+id/Relative0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        >
        <RelativeLayout
            android:id="@+id/Relative1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/subdued_red"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtro"
                android:gravity=""
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                tools:ignore="HardcodedText" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/Relative2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/Relative1"
            android:background="#302C2C"
            android:orientation="vertical"
            android:paddingTop="10dp"
            >
            <TextView
                android:id="@+id/SeleccionCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/seleccionar_ciudad"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                ></TextView>
            <RelativeLayout
                android:id="@+id/Relative3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:paddingLeft="30dp"
                android:layout_below="@id/SeleccionCiudad"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/CiudadElegida"
                    android:text="@string/ciudad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@color/subdued_red"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/ListaCiudades"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/CiudadElegida"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"></Spinner>
            </RelativeLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tpEsta"
                android:layout_below="@id/Relative3"
                android:text="Tipo de establecimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                ></TextView>
            <RelativeLayout
                android:id="@+id/Relative4"
                android:layout_below="@id/tpEsta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:gravity="center|top"
                android:paddingTop="20dp"
                android:paddingLeft="10dp">

                <Button
                    android:id="@+id/btnRestaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/subdued_red"
                    android:text="Restaurante"
                    android:textColor="#212121"
                    android:textSize="12sp"
                    app:icon="@drawable/restaurante"
                    app:iconSize="20dp"
                    app:iconTint="@null"></Button>

                <Button
                    android:id="@+id/btnEvento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@id/btnRestaurante"
                    android:backgroundTint="@color/subdued_red"
                    android:text="Evento"
                    android:textColor="#212121"
                    android:textSize="12sp"
                    app:icon="@drawable/evento"
                    app:iconSize="20dp"
                    app:iconTint="@null"></Button>

                <Button
                    android:id="@+id/btnLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/btnEvento"
                    android:backgroundTint="@color/subdued_red"
                    android:text="Local"
                    android:textColor="#212121"
                    android:textSize="10sp"
                    app:icon="@drawable/tienda"
                    app:iconSize="20dp"
                    app:iconTint="@null"></Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/Precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Relative4"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/precio"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>
            <RelativeLayout
                android:id="@+id/Relative5"
                android:layout_below="@id/Precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                >
                <RelativeLayout
                    android:id="@+id/Relative6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/txtDesd"
                        android:text="@string/desde"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        ></TextView>

                    <EditText
                        android:id="@+id/edDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtDesd"
                        android:textSize="20sp"
                        android:hint="Precio minimo"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"></EditText>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/Relative6"
                    android:id="@+id/Relative7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/txthasta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hasta"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="30sp"></TextView>

                    <EditText
                        android:id="@+id/edHas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txthasta"
                        android:hint="Precio maximo"
                        android:textColor="@color/white"
                        android:textColorHint="#FFFFFF"
                        android:textSize="20sp"
                        ></EditText>
                </RelativeLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/Horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Relative5"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="Horario de atención"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>
            <RelativeLayout
                android:id="@+id/Relative8"
                android:layout_below="@id/Horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                >
                <RelativeLayout
                    android:id="@+id/Relative9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/txtAbre"
                        android:text="Abre"
                        android:textSize="30sp"
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        ></TextView>

                    <EditText
                        android:id="@+id/edAbre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtAbre"
                        android:hint="Abre hora"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textSize="20sp"></EditText>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/Relative9"
                    android:id="@+id/Relative10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/txtCierra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cierra"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textSize="30sp"></TextView>

                    <EditText
                        android:id="@+id/edCierra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtCierra"
                        android:hint="Hora cierra"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textSize="20sp"></EditText>
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/botonAp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Relative8"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/subdued_red"
                android:text="Aplicar filtros"
                android:textColor="#212121"></Button>

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>